lsecities-2012 (1.0.1) stable; urgency=low

  * [fixed] search lsecities.net via google
  * who's who pages
    * [feature] added support for display after/display until
    * [feature] added support for staff group membership
    * [feature] added support for profile text specifically
      for staff pages
  * [content] added privacy policy
  * [feature] compliance with UK Cookie law - added support for
    Cookie Control by CIVIC UK (http://civicuk.com/cookie-law/)
  * [fixed] some jQuery code would not load correctly when
    jQuery code at an earlier stage would fail - this is now fixed
  * [design] clearer keyfacts column for Publications pod
  * [feature] integration with Usernoise WP plugin for feedback
  * [feature] Urban Age conferences/cities menu in the Urban Age
    Conferences section of the site now support displaying a conference
    title besides city and year - e.g.
      Electric City
      London | 2012
  * sliders are now responsive
  * event pages:
    * [feature] added support for linking to a Storify story
    * [feature] editors can insert in advance an event blurb to be
      displayed before the event and a blurb to be displayed once the
      event has happened
    * [fixed] contact and booking access info was supposed to be
      displayed before an event but wasn't displaying - this is now
      fixed

 -- andrea rota <a.rota@lse.ac.uk>  [DATE]
 
lsecities-2012 (1.0) stable; urgency=low

  * first public release

 -- andrea rota <a.rota@lse.ac.uk>  Mon, 30 Apr 2012 03:48:39 +0100